<resources>
    <string name="under_construction">Under construction</string>

    <string name="text_feedback_app">Version %1$S: feedback</string>
    <string name="text_select_account">Choose account</string>
    <string name="text_authorization_description">To manage the connection, you must log in under the google account of the administrator of the this connection</string>
    <string name="text_version">Version %1$S</string>
    <string name="text_about_app">About app</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_description_feedback">Tell us what to fix, how to improve the application. Consider proposals for cooperation and development</string>
    <string name="text_version_app">Application version</string>
    <string name="text_authorization">Login</string>
    <string name="text_sign_out">Log off</string>
    <string name="text_settings">Settings</string>
    <string name="text_choose_theme_label">Choose theme</string>
    <string name="text_description_theme">Light, dark or use the theme of your device</string>
    <string name="text_choose_theme_light">Light</string>
    <string name="text_choose_theme_dark">Dark</string>
    <string name="text_choose_theme_default">System</string>
</resources>
