<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        style="@style/Widget.MyTheme.TextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_settings" />

    <LinearLayout
        style="@style/PaddingPreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/text_choose_theme_label"
            android:textAppearance="?textAppearanceSubtitle1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/text_description_theme"
            android:textAppearance="?textAppearanceCaption" />


        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/theme_toggle_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/theme_light"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="12dp"
                android:text="@string/text_choose_theme_light"
                app:icon="@drawable/ic_theme_light"
                app:iconPadding="4dp" />

            <Button
                android:id="@+id/theme_dark"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="12dp"
                android:text="@string/text_choose_theme_dark"
                app:icon="@drawable/ic_theme_dark"
                app:iconPadding="4dp" />

            <Button
                android:id="@+id/theme_default"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="12dp"
                android:text="@string/text_choose_theme_default"
                app:icon="@drawable/ic_theme_default"
                app:iconPadding="4dp" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="?attr/dividerHorizontal" />

</LinearLayout>