<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_sign_in"
        style="@style/Widget.MyTheme.TextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_authorization" />

    <LinearLayout
        android:id="@+id/ll_select_account"
        style="@style/PaddingPreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/text_select_account"
            android:textAppearance="?textAppearanceSubtitle1" />

        <TextView
            android:id="@+id/tv_admin_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/text_authorization_description"
            android:textAppearance="?textAppearanceCaption"
            android:visibility="visible" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bottom_sign_out"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:text="@string/text_sign_out"
            app:icon="@drawable/ic_account_sign_out"
            app:iconSize="20dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/bottom_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="start"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="?attr/dividerHorizontal" />

</LinearLayout>